deploy/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: app
  labels:
    app: api
    app.kubernetes.io/part-of: desafio
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
